--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "author": "Koji Ishimoto <koji.ishimoto@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@nonbili/svgen": "^0.2.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
+    "postcss-preset-env": "^6.7.0",
     "purescript": "^0.13.8",
     "purty": "^6.2.0",
-    "spago": "^0.15.3"
+    "spago": "^0.15.3",
+    "tailwindcss": "^1.4.6"
   },
   "scripts": {
     "watch": "spago build --watch",
     "parcel": "parcel index.html",
     "dev": "run-p watch parcel",
-    "build": "spago build && parcel build index.html"
+    "build": "spago build && parcel build index.html",
+    "svg": "svgen -F assets/svg -o src/Icons.purs"
   }
 }
